<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"
        android:orderInCategory="1" />

    <item
        android:id="@+id/action_alerts"
        android:title="@string/alerts"
        android:icon="@drawable/ic_alert"
        app:showAsAction="ifRoom"
        android:orderInCategory="2" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit_device"
        android:icon="@drawable/ic_edit"
        app:showAsAction="never"
        android:orderInCategory="3" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/device_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"
        android:orderInCategory="4" />

    <item
        android:id="@+id/action_share"
        android:title="Share Device"
        android:icon="@drawable/ic_share"
        app:showAsAction="never"
        android:orderInCategory="5" />

    <item
        android:id="@+id/action_export"
        android:title="Export Data"
        android:icon="@drawable/ic_export"
        app:showAsAction="never"
        android:orderInCategory="6" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete_device"
        android:icon="@drawable/ic_delete"
        app:showAsAction="never"
        android:orderInCategory="7" />

</menu>
